# sing-box-copilot

./: .gitignore  Cargo.toml  README.md  mise.toml
sql/: schema.sql
src/: lib.rs
src/cli/: commands.rs
src/core/: config.rs  credentials.rs  mod.rs  subscription.rs  token.rs
src/server/: mod.rs  routes.rs  state.rs
templates/clash/: config.yaml
templates/shadowrocket/: config.conf
templates/sing-box/: config.json
