[package]
name = "sing-box-copilot"
version = "0.1.0"
edition = "2021"
default-run = "sing-box-copilot"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-graphql = { version = "7", features = ["uuid"] }
axum = "0.8"
base64 = "0.22"
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
